--- a/UI/ventanaPrincipal.ui
+++ b/UI/ventanaPrincipal.ui
@@ -1078,7 +1078,7 @@ QPushButton:hover{
              <enum>QFrame::StyledPanel</enum>
             </property>
             <property name="currentIndex">
-             <number>1</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="pageMatricula">
              <property name="styleSheet">
@@ -1248,7 +1248,7 @@ border-radius:20px;</string>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="btnRegistrar">
+                     <widget class="QPushButton" name="btnRegistrarMatricula">
                       <property name="minimumSize">
                        <size>
                         <width>130</width>
